fix off-centered login form

--- a/public/style-0.css
+++ b/public/style-0.css
@@ -11,6 +11,9 @@ body {
   height: 100%;
   overflow: hidden;
 }
+.centered{
+  margin: auto;
+}
 .vert-centered{
   position: absolute;
   top: 50%;
